# ed-galaxy-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frontier_auth.py  pyproject.toml  test_mcp.py
src/ed_galaxy_mcp/: __init__.py  server.py
